# poc20200206-pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  requirements-dev.txt  setup.cfg  tox.ini
pre_commit_hooks/: hello_world.py  poc_precommit_pmd.py
