[metadata]
name = pre_commit_hooks_pmd_java
version = 0.4
description = Hooks to validate java based project using pre-commit and PMD.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/javier-carpio-telus/poc20200206-pre-commit-hooks
author = Javier Carpio
author_email = javier.carpio@telus.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7

[options]
packages = find:
install_requires =
    flake8
    ruamel.yaml>=0.15
    toml
python_requires = >=2.7

[options.entry_points]
console_scripts =
    hello_world = pre_commit_hooks.hello_world:main
    poc_precommit_pmd = pre_commit_hooks.poc_precommit_pmd:main
    #pretty-format-json = pre_commit_hooks.pretty_format_json:main


[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
